--- a/package.json
+++ b/package.json
@@ -21,15 +21,18 @@
   "@heroui/switch": "2.2.8",
   "@heroui/system": "2.4.6",
   "@heroui/theme": "2.4.5",
+  "@icons-pack/react-simple-icons": "^12.5.0",
   "@react-aria/ssr": "3.9.7",
   "@react-aria/visually-hidden": "3.8.18",
   "clsx": "2.1.1",
+  "cobe": "^0.6.3",
   "framer-motion": "11.13.1",
   "intl-messageformat": "^10.5.0",
   "next": "^15.1.5",
   "next-themes": "^0.4.4",
   "react": "18.3.1",
   "react-dom": "18.3.1",
+  "react-fast-marquee": "^1.6.5",
   "react-icons": "^5.4.0"
  },
  "devDependencies": {
